--- a/src/pages/Cleaner.css
+++ b/src/pages/Cleaner.css
@@ -1,6 +1,8 @@
 .page.cleaner {
   height: 100%;
+  width: 100%;
   min-height: 0;
+  overflow: hidden;
 }
 
 .page-header {
